tests/fixtures/invalid/pow_set_bool_list.py
# Cannot call pow() with Set[int], Bool, List[int]
x = pow({1, 2, 3}, True, [1, 2, 3])
